--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="MonsterFantasy/core/src"/>
 	<classpathentry kind="src" path="MonsterFantasy/desktop/src"/>
 	<classpathentry kind="lib" path="MonsterFantasy/gradle/wrapper/gradle-wrapper.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
