Actualización de la interfaz de combate

--- a/MonsterFantasy/build.gradle
+++ b/MonsterFantasy/build.gradle
@@ -63,5 +63,8 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
         
+        testImplementation 'junit:junit:4.13'
+        implementation 'org.xerial:sqlite-jdbc:3.7.2'
+        implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     }
 }
